2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: provide add new parent option
	* src/Editors/_EditEvent.py: used set_window
	* src/glade/gramps.glade: add new buttons for add new parent

2006-04-27  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/CmdRef.py: Fix tool.
	* src/PluginUtils/_PluginStatus.py: Fix wm.
	* src/PluginUtils/_Plugins.py: Fix Reload tool. The re-building of
	the menus still needs to be fixed.
	* src/plugins/Leak.py: Fix wm.
	* src/docgen/LPRDoc.py: Import Errors module before it is called.
	* src/plugins/DumpGenderStats.py: Fix wm.

2006-04-27  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: flush cache on row update
	* src/DisplayTabs.py: check of event==None when determining default type
	* src/ViewManager.py: support for keypress events
	* src/gramps.py: fix gnome init

2006-04-26  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/PatchNames.py (PatchNames.on_ok_clicked): Properly
	call update.
	* src/plugins/Verify.py: Fix wm.
	* src/plugins/RelCalc.py: Fix wm.
	* src/plugins/SoundGen.py: Fix wm.
	* src/plugins/Checkpoint.py: Fix wm.
	* src/plugins/ReorderIds.py: Adapt to new API; rebuild for Events
	and Repositories.
	* src/GrampsLogger/_ErrorReportAssistant.py
	(ErrorReportAssistant._get_sys_information): Add LANG to report.

	* src/plugins/ChangeTypes.py: Fix wm; adapt to RelLib changes.
	* src/plugins/ChangeNames.py: Fix wm.
	* src/MergePeople.py: Adapt to RelLib changes.
	* src/plugins/Merge.py: Properly call MergePeople; properly call
	update; set dbstate and uistate as instance attributes.

	* src/plugins/Check.py: Adapt to new family relation types.

2006-04-26  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: connect goto_handle function for bookmark 
	callback
	* src/PageView.py: connect goto_handle function for bookmark 
	callback
	* src/ViewManager.py: force uimanager updates
	* src/Bookmarks.py: force uimanager updates