@@ -1,4 +1,5 @@
 2006-04-27  Don Allingham  <don@gramps-project.org>
+	* src/TipOfDay.py (TipOfDay.__init__): switch to ManagedWindow
 	* src/Editors/_EditFamily.py: provide add new parent option
 	* src/Editors/_EditEvent.py: used set_window
 	* src/glade/gramps.glade: add new buttons for add new parent
